--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1",
     "socketio-file-upload": "^0.7.3"
