--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "npm build"
   },
   "author": "",
   "license": "ISC",
